# paper_efficient-MDGFRD

./: CMakeLists.txt  README.md  main.c  main.cpp
2draft/: .nfs000000000b2d2b39000d5789  bruteForce.hpp  checks.hpp  draw.hpp  drawDef.hpp  greensFunct.hpp  greensFunctDef.hpp  init.hpp  main  main.cpp  parametersDef.hpp  print.hpp  run  run_GF.hpp  run_aGF1.hpp  run_aGF2.hpp  run_hybGF.hpp  scriptPerf.sh  shell.hpp  step.hpp  tools.hpp
2draft/Diff/: .nfs000000000b0247a400016b65  .nfs000000000b30634f000d5788  .nfs000000000b306384000046e2  diff2.out  main.cpp
2draft/Diff/data/: diff1.out  plot_diff.py
2draft/Perf/: .nfs000000000af8305c00018bd1  .nfs000000000af8370d00012467  .nfs000000000af8443b00012465  .nfs000000000af8602500000451  .nfs000000000af8602600000453  .nfs000000000af8602700000454  .nfs000000000af8602900000455  .nfs000000000b2e69c8000d5781  .nfs000000000b2e69ca000d565b  .nfs000000000b2e69d7000d30fa  .nfs000000000b2e69de000d3a84  .nfs000000000b2e69f7000d5782  .nfs000000000b2e69f9000d578b  .nfs000000000b2e6a0d000d084f  main.cpp  script.sh
2draft/Perf/data/: 1.burst.txt  1.data.txt  2.GF.txt  2.burst.txt  2.data.txt  (+4 more)
2draft/diffusion/: diffusion.hpp  main  script.sh
2draft/performance/: main  performance.hpp
2draftNeighb/: bruteForce.hpp  burst.hpp  checks.hpp  draw.hpp  greensFunct.hpp  init.hpp  main  main.cpp  parameters.hpp  print.hpp  run_BM.hpp  run_GF.hpp  run_aGF.hpp  scriptPerf.sh  shell.hpp  step.hpp  tools.hpp
2draftNeighb/Perf/: .nfs000000000af8047d0001237b  .nfs000000000af8106d00018bd2  .nfs000000000af82d0e00019369  .nfs000000000af8601e00000452  .nfs000000000b2e69cb000d02e0  .nfs000000000b2e69d9000d337f  .nfs000000000b2e69db000d3462  .nfs000000000b2e6a0f000d0711  .nfs000000000b2e6a11000d0868  .nfs000000000b2f22b50000040d  .nfs000000000b2f41c9000d56f6  .nfs000000000b2f466b000d4024  .nfs000000000b2f467f000d42f9  .nfs000000000b2f4680000d508e  .nfs000000000b2f4681000d5177  .nfs000000000b2f4682000d5678  .nfs000000000b2f4683000d51a0  .nfs000000000b2f4684000d52cb  .nfs000000000b2f4685000d56f4  .nfs000000000b2f4686000d567a  .nfs000000000b2f4688000d56f7  .nfs000000000b2f4689000d5711  .nfs000000000b2f468b000d5713  .nfs000000000b2f468d000d5725  .nfs000000000b2f468e000d572a  .nfs000000000b2f468f000d5727  .nfs000000000b2f4691000d5890  .nfs000000000b2f46be000023fc  .nfs000000000b2f46bf000023fe  .nfs000000000b2f46c000002432  .nfs000000000b2f46d100002db8  main.cpp  perf.out  perf6.out  perf7.out  script.sh
LowParticleNumber/: bruteForce.h  bruteForce.hpp  burst.h  burst.hpp  checks.h  checks.hpp  draw.h  draw.hpp  greensFunct.h  greensFunct.hpp  init.h  init.hpp  parameters.h  parameters.hpp  print.hpp  run_BM.h  run_BM.hpp  run_GF.h  run_GF.hpp  run_aGF1.h  run_aGF1.hpp  run_aGF2.h  run_aGF2.hpp  run_hybrGF.h  run_hybrGF.hpp  shell.h  shell.hpp  step.hpp  tools.h  tools.hpp
LowParticleNumber/Fig4/: Fig4.h  Fig4.hpp
LowParticleNumber/Fig5_8/: Fig5_8.h  Fig5_8.hpp  perf1.out
LowParticleNumber/Fig9/: Fig9.h  Fig9.hpp
NeighborLists/: bruteForce_nl.h  bruteForce_nl.hpp  burst_nl.hpp  checks_nl.hpp  init_nl.h  init_nl.hpp  parameters.hpp  parameters_nl.h  print.hpp  print_nl.h  run_BM_nl.h  run_BM_nl.hpp  run_GF_nl.h  run_GF_nl.hpp  run_aGF_nl.h  run_aGF_nl.hpp  shell_nl.h  shell_nl.hpp  step_nl.h  step_nl.hpp  tools_nl.h  tools_nl.hpp
NeighborLists/Tab1/: tab1.hpp
(+130 files in other folders)
